# brother-assistant

./: .gitignore  Cargo.toml  LICENSE  README.es.md  README.md  README.pt-br.md  index.html  package-lock.json  package.json
.github/workflows/: linux-cli.yml  linux-shell.yml  release.yml
brother-core/: Cargo.toml
brother-core/src/: agent.rs  chat.rs  config.rs  copilot.rs  lib.rs  runtime.rs  skills.rs
brother-shell/: Cargo.toml  brother-assistant.desktop
brother-shell/src/: main.rs
linux-cli/: Cargo.toml
linux-cli/src/: main.rs
scripts/: build-release.sh
skills/open-application/: SKILL.md
src/: App.tsx  i18n.tsx  modelCatalog.ts  styles.css  types.ts
src/components/: ChatPanel.tsx  Composer.tsx  ConversationSidebar.tsx  MarkdownRenderer.tsx  QuickActions.tsx  QuickModelPanel.tsx  Settings.tsx  Sidebar.tsx  TopBar.tsx
src/platform/: host.ts
