[package]
name = "brother-linux-cli"
version = "1.1.0"
edition = "2021"
license = "LGPL-3.0-or-later"

[dependencies]
brother-core = { path = "../brother-core" }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde_json = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }